# RBMK

./: .gitignore  Cargo.toml  README.md  build.rs  snapshot.md
fortran/: rbmk_constants.f90  rbmk_kinetics.f90  rbmk_neutronics.f90  rbmk_physics.f90  rbmk_reactivity.f90  rbmk_safety.f90  rbmk_simulation.f90  rbmk_spatial.f90  rbmk_thermal.f90  rbmk_xenon.f90
src/: commands.rs  fortran_ffi.rs  main.rs  reactor.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  fortran_ffi.rs  lib.rs  main.rs  reactor.rs
tools/: export_3d_model.html  parse_opb82_scheme.py  ref.ts  visualizer.html
tools/js/: active_zone.js  channel_tracts.js  e_shield.js  kzh_cooling.js  l_shell.js  main.js  or_shield.js  support_cross.js
tools/snapshot/: snapshot.js
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/config/: opb82_layout.json
ui/src/: cys_control.ts  graphs.ts  main.ts  rbmk_core_layout.ts  reactor_2d.ts  reactor_heatmap.ts  visualization.ts
