[package]
name = "rbmk-simulator"
version = "0.1.0"
edition = "2021"
authors = ["RBMK Physics Team"]
description = "RBMK reactor physics simulation with Rust-Fortran-Tauri integration"

[lib]
name = "rbmk_simulator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rbmk-simulator"
path = "src/main.rs"

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# For numerical operations
ndarray = "0.15"

# Dynamic library loading for Fortran DLL
libloading = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
